[project]
name = "baby-tracker"
version = "0.1.0"
description = "Voice-to-Huckleberry baby tracker API server"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "huckleberry-api>=0.1.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.10.0",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
]

[tool.uv]
package = false
